--- a/weatherStyles.css
+++ b/weatherStyles.css
@@ -36,6 +36,18 @@ body {
 	text-align: center;
 	margin-left: 150px;
 }
+.extraInfo {
+	font-size: 22px;
+	font-weight: 400;
+	line-height: 28px;
+	text-align: left;
+	text-transform: lowercase;
+}
+.extraInfo h1 {
+	display: inline-block;
+	color: #666;
+	font-weight: 700;
+}
 .forecastList {
 	display: flex;
 	flex-direction: row;
